# provas-poscomp

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
provas_poscomp/: main.py
provas_poscomp/models/: file.py
provas_poscomp/repository/: aws_s3.py
provas_poscomp/routes/: file.py
