[tool.poetry]
name = "provas-poscomp"
version = "0.1.0"
description = ""
authors = ["JoseCarlosNF <josecarlos.n.f99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
mangum = "^0.16.0"
python-multipart = "^0.0.5"
boto3 = "^1.26.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
blue = "^0.9.1"
uvicorn = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
